--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,5 +3,5 @@ cryptg~=0.4.0
 pyAesCrypt~=6.1.1
 SQLAlchemy~=2.0.25
 aiosqlite~=0.19.0
-pydantic~=2.5.3
+pydantic>=3.0.0a6
 pydantic_settings~=2.1.0
