--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,10 +6,30 @@ on:
       - "src/**"
       - ".github/workflows/ci.yaml"
       - "Dockerfile"
+  pull_request:
+    paths:
+      - "src/**"
+      - ".github/workflows/ci.yaml"
+      - "Dockerfile"
   workflow_dispatch:
+    inputs:
+      version:
+        description: "Version tag to publish (e.g. v1.2.3 or 1.2.3). Leave empty to auto-tag."
+        required: false
+        default: ""
+      push_latest:
+        description: "Also push :latest"
+        required: false
+        type: boolean
+        default: false
 
 env:
   REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository_owner }}/telegram-logger
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build_and_push:
@@ -26,8 +46,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
+
+      - name: Normalize manual version
+        id: v
+        shell: bash
+        run: |
+          ver="${{ github.event.inputs.version }}"
+          ver="${ver//[[:space:]]/}"
+          if [ -n "$ver" ] && [[ "$ver" != v* ]]; then
+            ver="v$ver"
+          fi
+          echo "version=$ver" >> "$GITHUB_OUTPUT"
 
       - name: Login GHCR
         if: github.event_name != 'pull_request'
@@ -43,11 +73,13 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/telegram-logger
           tags: |
-            type=raw,value=latest
-            type=sha,format=long
-            type=semver,pattern={{major}},prefix=v
-            type=semver,pattern={{major}}.{{minor}},prefix=v
-            type=semver,pattern={{version}},prefix=v
+            type=raw,value=${{ steps.v.outputs.version }},enable=${{ github.event_name == 'workflow_dispatch' && steps.v.outputs.version != '' }},priority=1100
+            type=semver,pattern={{version}},prefix=v,enable=${{ startsWith(github.ref, 'refs/tags/v') }},priority=1000
+            type=semver,pattern={{major}}.{{minor}},prefix=v,enable=${{ startsWith(github.ref, 'refs/tags/v') }},priority=900
+            type=semver,pattern={{major}},prefix=v,enable=${{ startsWith(github.ref, 'refs/tags/v') }},priority=800
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/master' }},priority=700
+            type=sha,format=long,enable=${{ github.ref == 'refs/heads/master' }},priority=100
+            type=raw,value=latest,enable=${{ (startsWith(github.ref,'refs/tags/v') || (github.event_name == 'workflow_dispatch' && steps.v.outputs.version != '')) && github.event.inputs.push_latest == 'true' }},priority=750
 
       - name: Build & Push
         id: build
@@ -55,8 +87,10 @@ jobs:
         with:
           file: ./Dockerfile
           platforms: linux/amd64
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           sbom: true
           provenance: mode=max
