--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,5 @@
 name: CI
+
 on:
   push:
     branches: ["master"]
@@ -71,14 +72,14 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/telegram-logger
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=${{ steps.v.outputs.version }},enable=${{ github.event_name == 'workflow_dispatch' && steps.v.outputs.version != '' }},priority=1100
             type=semver,pattern={{version}},prefix=v,enable=${{ startsWith(github.ref, 'refs/tags/v') }},priority=1000
             type=semver,pattern={{major}}.{{minor}},prefix=v,enable=${{ startsWith(github.ref, 'refs/tags/v') }},priority=900
             type=semver,pattern={{major}},prefix=v,enable=${{ startsWith(github.ref, 'refs/tags/v') }},priority=800
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/master' }},priority=700
-            type=sha,format=long,enable=${{ github.ref == 'refs/heads/master' }},priority=100
+            type=sha,format=short,enable=${{ github.ref == 'refs/heads/master' }},priority=100
             type=raw,value=latest,enable=${{ (startsWith(github.ref,'refs/tags/v') || (github.event_name == 'workflow_dispatch' && steps.v.outputs.version != '')) && github.event.inputs.push_latest == 'true' }},priority=750
 
       - name: Build & Push
