--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -75,13 +75,16 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
+            # Manual dispatch version
             type=raw,value=${{ steps.v.outputs.version }},enable=${{ github.event_name == 'workflow_dispatch' && steps.v.outputs.version != '' }},priority=1100
+
             type=semver,pattern={{version}},prefix=v,enable=${{ startsWith(github.ref, 'refs/tags/v') }},priority=1000
             type=semver,pattern={{major}}.{{minor}},prefix=v,enable=${{ startsWith(github.ref, 'refs/tags/v') }},priority=900
             type=semver,pattern={{major}},prefix=v,enable=${{ startsWith(github.ref, 'refs/tags/v') }},priority=800
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/master' }},priority=700
+
+            type=raw,value=latest,enable=${{ startsWith(github.ref,'refs/tags/v') }},priority=700
+
             type=sha,format=short,enable=${{ github.ref == 'refs/heads/master' }},priority=100
-            type=raw,value=latest,enable=${{ (startsWith(github.ref,'refs/tags/v') || (github.event_name == 'workflow_dispatch' && steps.v.outputs.version != '')) && github.event.inputs.push_latest == 'true' }},priority=750
 
       - name: Build & Push
         id: build
@@ -89,7 +92,7 @@ jobs:
         with:
           file: ./Dockerfile
           platforms: linux/amd64
-          push: ${{ github.event_name != 'pull_request' }}
+          push: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
