--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,8 +82,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}},prefix=v,enable=${{ startsWith(github.ref, 'refs/tags/v') }},priority=900
             type=semver,pattern={{major}},prefix=v,enable=${{ startsWith(github.ref, 'refs/tags/v') }},priority=800
 
-            type=raw,value=latest,enable=${{ startsWith(github.ref,'refs/tags/v') }},priority=700
-
+            type=raw,value=latest,enable=${{ startsWith(github.ref,'refs/tags/v') || (github.event_name == 'workflow_dispatch' && steps.v.outputs.version != '' && github.event.inputs.push_latest) }},priority=750
             type=sha,format=short,enable=${{ github.ref == 'refs/heads/master' }},priority=100
 
       - name: Build & Push
